--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
+    {/* Google tag (gtag.js) */}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W73PY60LKY"></script>
+    <script>
+      {`
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-W73PY60LKY');
+      `}
+    </script>
+
     <meta property="og:title" content="maister-chemical-solutions-b2b" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
